# dwm-status

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.org  compile_checks.h  config.h  status.c
src/: compile_checks.h  config.h  logging.h  status.c
